[gd_scene load_steps=3 format=3 uid="uid://cii4f335s74ie"]

[ext_resource type="Script" uid="uid://qpkgfkw2fq63" path="res://ui/main_menu.gd" id="1_p8ccj"]

[sub_resource type="Theme" id="Theme_5yyqw"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_5yyqw")
script = ExtResource("1_p8ccj")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -50.5
offset_right = 75.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="StartGame" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start game"

[node name="Settings" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="VBoxContainer/StartGame" to="." method="on_start_game_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="on_exit_pressed"]
